--- a/frontend/src/components/Content/Content.module.css
+++ b/frontend/src/components/Content/Content.module.css
@@ -2,4 +2,8 @@
     flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    margin: 0 auto;
+    padding-left: 10vh;
+    padding-right: 10vh;
 }
