--- a/frontend/src/components/Content/ContentComponents/ContentWidgets/ContentWidgets.module.css
+++ b/frontend/src/components/Content/ContentComponents/ContentWidgets/ContentWidgets.module.css
@@ -83,9 +83,11 @@
     height: 170px;
     transform: rotate(-8deg);
     display: flex;
+    gap: 50px;
     background: white;
     border-radius: 18px;
     box-shadow: 0px 3.16135px 18.17773px 0px #E6EAF3;
+    margin-left: 40px;
 }
 
 .widgetStatsText {
@@ -105,6 +107,12 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
+    justify-content: center;
+    padding-top: 16px;
+}
+
+.widgetStatsMoneyImg {
+    transform: rotate(5deg);  
 }
 
 .widgetStatsLineImg {
