--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -3,8 +3,8 @@
     background: black;
     color: white;
     height: 100vh;
-    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-right: 10vh;
+    padding-left: 10vh;
 }
