--- a/frontend/src/components/Content/Content.module.css
+++ b/frontend/src/components/Content/Content.module.css
@@ -3,7 +3,5 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin: 0 auto;
-    padding-left: 10vh;
-    padding-right: 10vh;
+    justify-content: center;
 }
