--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -15,6 +15,12 @@
   transition: background-color 5000s ease-in-out 0s;
 }
 
+.formContainer {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
 .form {
   display: flex;
   flex-direction: column;
