--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -29,6 +29,7 @@
   width: 462.48px;
   background-color: white;
   border-radius: 30.83px;
+  box-shadow: 0px -60px 400px -20px rgba(165, 203, 255, 0.49);
 }
 
 .registerContainer {
@@ -112,7 +113,6 @@
   left: 10px;
 }
 
-
 .inputContainer input {
   position: relative;
   padding-left: 39.82px;
@@ -137,5 +137,9 @@
   border: none;
   cursor: pointer;
   align-self: center;
+}
+
+.errorName {
+  color: red;
 }
 
