--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -25,6 +25,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 533.14px;
   width: 462.48px;
   background-color: white;
@@ -46,6 +47,7 @@
 .title {
   margin: 0;
   padding: 0;
+  margin-left: -160px;
   padding-bottom: 10.28px;
   font-size: 30.83px;
   font-family: MulishBold;
@@ -57,6 +59,7 @@
 .subtitle {
   margin: 0;
   padding: 0;
+  margin-left: -160px;
   font-size: 17.99px;
   font-family: MulishMedium;
   color: #717A97;
@@ -71,60 +74,72 @@
   cursor: pointer;
 }
 
+.inputContainer {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 56.53px;
+  width: 400.82px;
+  background-color: #F0F2F5;
+  margin-bottom: 15.42px;
+  border-radius: 15.42px;
+}
+
+.inputContainer input {
+  position: relative;
+  padding-left: 15px;
+  border: none !important;
+  background-color: #F0F2F5;
+  box-sizing: border-box;
+  border-radius: 15.42px;
+}
+
+.inputContainer input:focus {
+  border: none !important;
+  outline: none !important;
+}
+
 .input {
   margin: 0;
   padding: 0;
-  height: 56.53px;
-  width: 400.82px;
+  width: 321.17px;
+  border: none !important;
   font-size: 17.99px;
   font-family: MulishMedium;
-  color: #A1ADCD;
   font-weight: 500;
   word-wrap: break-word;
   background-repeat: no-repeat;
   background-position: 10px center;
 }
 
-.inputUser {
-  background-image: url('../../assets/images/inputUser.svg');
+.icon {
+  word-wrap: break-word;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+}
+
+.iconUser {
   background-size: 20px;
 }
 
-.inputTg {
-  background-image: url('../../assets/images/inputTg.svg');
+.iconTg {
   background-size: 46px;
+  padding-top: 5px;
 }
 
-.inputParol {
-  background-image: url('../../assets/images/inputParol.svg');
+.iconParol {
   background-size: 20px;
 }
 
-.inputTrafic {
-  background-image: url('../../assets/images/inputTrafic.svg');
+.iconTrafic {
   background-size: 20px;
-}
-
-.inputContainer {
-  margin: 0;
-  padding: 0;
-  margin-bottom: 15.42px;
-  top: 50%;
-  left: 10px;
-}
-
-.inputContainer input {
-  position: relative;
-  padding-left: 39.82px;
-  border-radius: 15.42px;
-  border: none;
-  background-color: #F0F2F5;
-  box-sizing: border-box;
 }
 
 .submitButton {
   margin-top: 21.84px;
-  margin-bottom: 21.84px;
+  margin-bottom: 30.84px;
   font-family: MulishMedium;
   height: 64.23px;
   width: 400.82px;
