feat: сделать компонент авторизации

--- a/frontend/src/components/PartnerComplete/PartnerComplete.module.css
+++ b/frontend/src/components/PartnerComplete/PartnerComplete.module.css
@@ -45,6 +45,11 @@
   justify-self: center;
   cursor: pointer;
   border: none;
+  transition: background-color 0.3s ease;
+}
+
+.closeButton:hover {
+  background-color: #8fc5fa;
 }
 
 .overlay {
