--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,6 +1,6 @@
 .App {
     text-align: center;
-    background: black;
+    background: #080A0F;
     color: white;
     height: 100vh;
     display: flex;
@@ -8,3 +8,6 @@
     padding-right: 10vh;
     padding-left: 10vh;
 }
+/* @media screen and (max-width: 1300) {
+
+} */
