--- a/frontend/src/components/Content/Content.module.css
+++ b/frontend/src/components/Content/Content.module.css
@@ -1,7 +1,14 @@
-.Content {
+.content {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+}
+
+.contentGrid {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
 }
