--- a/frontend/src/components/Content/Content.module.css
+++ b/frontend/src/components/Content/Content.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    padding-top: 20px;
 }
 
 .contentGrid {
