--- a/frontend/src/components/Content/ContentComponents/ContentTelegram/ContentTelegram.module.css
+++ b/frontend/src/components/Content/ContentComponents/ContentTelegram/ContentTelegram.module.css
@@ -60,3 +60,9 @@
         align-self: center;
     }
 }
+
+@media screen and (max-width: 800px) {
+        .contentTelegramContainer {
+            margin-top: 60px;
+    }
+}
