--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -19,6 +19,7 @@
   flex: 1;
   display: flex;
   justify-content: center;
+  padding-bottom: 20vh;
 }
 
 .form {
@@ -26,11 +27,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 533.14px;
-  width: 462.48px;
+  height: 563.14px;
+  width: 482.48px;
   background-color: white;
   border-radius: 30.83px;
-  box-shadow: 0px -60px 400px -20px rgba(165, 203, 255, 0.49);
+  box-shadow: 0px -70px 400px -20px rgba(165, 203, 255, 0.49);
 }
 
 .registerContainer {
@@ -173,6 +174,69 @@
 
 @media screen and (max-width: 1400px) {
   .formContainer {
-    padding-bottom: 80px;
+    padding-bottom: 5vh;
   }
 }
+
+@media screen and (max-width: 650px) {
+  .formContainer {
+    height: 520px;
+    width: 400px;
+  }
+  .title {
+    margin-left: -120px;
+  }
+
+  .subtitle {
+      margin: 0;
+      padding: 0;
+      margin-left: -120px;
+  }
+  .inputContainer {
+    width: 370px;
+  }
+  .submitButton {
+    width: 370px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .formContainer {
+    width: 300px;
+  }
+
+  .form {
+    height: 500px;
+  }
+  .title {
+    margin-left: -10px;
+    font-size: 28px;
+  }
+
+  .subtitle {
+      margin-left: -35px;
+      font-size: 16px;
+  }
+
+  .icon {
+    padding-left: 7px;
+  }
+  .inputContainer {
+    width: 270px;
+    height: 45px;
+  }
+  .iconTg {
+    width: 36px;
+    padding-left: 2px;
+    padding-top: 2px;
+  }
+
+  .input {
+    font-size: 15px;
+  }
+  .submitButton {
+    width: 270px;
+    font-size: 20px;
+  }
+}
+
