--- a/frontend/src/components/PartnerComplete/PartnerComplete.module.css
+++ b/frontend/src/components/PartnerComplete/PartnerComplete.module.css
@@ -99,3 +99,35 @@
   font-size: 21.39px;
   line-height: 32.09px;
 }
+
+@media screen and (max-width: 800px) {
+  .modalContent {
+    padding: 18px;
+    width: 560px;
+    height: 360px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+    .modalContent {
+      padding: 14px;
+      width: 420px;
+      height: 500px;
+  }
+  .subtitle {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+    .modalContent {
+      padding: 10px;
+      width: 290px;
+      height: 610px;
+  }
+  .subtitle {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+}
