--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -1,4 +1,4 @@
-.App {
+.combinedComponents {
     text-align: center;
     background: #080A0F;
     color: white;
@@ -10,7 +10,7 @@
     gap: 100px;
 }
 @media screen and (max-width: 1600px) {
-    .App {
+    .combinedComponents {
         padding-right: 5vh;
         padding-left: 5vh;
         gap: 50px;
@@ -18,14 +18,14 @@
 }
 
 @media screen and (max-width: 1400px) {
-    .App {
+    .combinedComponents {
         flex-direction: column;
         height: auto;
     }
 }
 
 @media screen and (max-width: 1600px) {
-    .App {
+    .combinedComponents {
         padding-right: 3vh;
         padding-left: 3vh;
     }
