--- a/frontend/src/components/AuthForm/AuthForm.module.css
+++ b/frontend/src/components/AuthForm/AuthForm.module.css
@@ -16,6 +16,9 @@
 }
 
 .formContainer {
+  background: #080A0F;
+  height: 100vh;
+  align-items: center;
   flex: 1;
   display: flex;
   justify-content: center;
