--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -16,10 +16,12 @@
 }
 
 .formContainer {
+  background: #080A0F;
+  height: 100vh;
+  align-items: center;
   flex: 1;
   display: flex;
   justify-content: center;
-  padding-bottom: 20vh;
 }
 
 .form {
