--- a/frontend/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/frontend/src/components/RegistrationForm/RegistrationForm.module.css
@@ -71,12 +71,16 @@
 }
 
 .authButton {
+  font-family: MulishMedium;
+  font-size: 16.90px;
   margin: 0;
   padding: 0;
   color: #436AF3;
   cursor: pointer;
   text-decoration: none;
   transition: color 0.3s ease;
+  border: none;
+  background-color: white;
 }
 
 .authButton:hover {
