--- a/frontend/src/components/Dashboard/CreateLinkModal/CreateLinkModal.module.css
+++ b/frontend/src/components/Dashboard/CreateLinkModal/CreateLinkModal.module.css
@@ -1,17 +1,37 @@
-/* Пример стилей для модального окна */
+@font-face {
+    font-family: InterMedium;
+    src: url("../../../assets/fonts/Inter/Inter-Medium.ttf");
+}
+
 .modalOverlay {
-position: fixed;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.modal {
+
+.modalPromo {
+    width: 435px;
+    height: 673px;
+    border-radius: 17.073px;
+    border: 2.439px solid var(--Stroke, #DFE4EA);
+    background: var(--white-white, #FFF);
+    overflow: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+.modalLink {
     width: 435px;
     height: 783.895px;
     border-radius: 17.073px;
@@ -22,12 +42,93 @@ position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
+.modalHeaderContainer::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 54px;
+  width: 100%;
+  height: 1px;
+  background: #E2E8F0;
+}
+
+.modalHeader {
+  font-size: 18px;
+  display: flex;
+  justify-content: space-between;
+  color: var(--dark-dark-5, #6B7280);
+  font-family: InterMedium;
+  align-items: center;
+  position: relative;
+  box-sizing: border-box; 
 }
 
 .closeBtn {
-
+  background: var(--white-white, #FFF);
+  cursor: pointer;
+  outline: none;
+  border: none;
 }
 
 .modalContent {
-  /* Стили для содержимого модального окна */
+  display: flex;
+  flex-direction: column;
+}
+
+.modalContentUI {
+  height: 5vh;
+  display: flex;
+  border-radius: 6.71px;
+  background: var(--gray-gray-2, #F3F4F6);
+  box-shadow: 0px 1.118px 4.473px 0px rgba(0, 0, 0, 0.12);
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+.linkBtn {
+  flex: 1;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: var(--Primary-Text-Color, #637381);
+  font-size: 15px;
+  font-family: InterMedium;
+}
+
+.linkBtnActive {
+  flex: 1;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: var(--Primary-Color, #3758F9);
+  font-size: 15px;
+  font-family: InterMedium;
+  border-radius: 4.473px;
+  background: var(--gray-gray, #F9FAFB);
+}
+
+.promoBtn {
+  flex: 1;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: var(--Primary-Text-Color, #637381);
+  font-size: 15px;
+  font-family: InterMedium;
+}
+
+.promoBtnActive {
+  flex: 1;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  color: var(--Primary-Color, #3758F9);
+  font-size: 15px;
+  font-family: InterMedium;
+  border-radius: 4.473px;
+  background: var(--gray-gray, #F9FAFB);
 }
