fix: исправить окно входа в мобилке

--- a/frontend/src/components/AuthForm/AuthForm.module.css
+++ b/frontend/src/components/AuthForm/AuthForm.module.css
@@ -167,3 +167,77 @@
   color: red;
 }
 
+@media screen and (max-width: 1400px) {
+  .formContainer {
+    padding-bottom: 5vh;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .formContainer {
+    height: 520px;
+    width: 400px;
+  }
+
+  .title {
+    margin-left: -50px;
+  }
+
+  .subtitle {
+    margin-left: -50px;
+  }
+
+  .inputContainer {
+    width: 370px;
+  }
+
+  .submitButton {
+    width: 370px;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .formContainer {
+    width: 300px;
+  }
+
+  .form {
+    height: 360px;
+  }
+
+  .title {
+    align-self: center;
+    margin-left: -30px;
+    font-size: 28px;
+  }
+
+  .subtitle {
+    align-self: center;
+    margin-left: -30px;
+    font-size: 16px;
+  }
+
+  .icon {
+    padding-left: 7px;
+  }
+
+  .inputContainer {
+    width: 270px;
+    height: 45px;
+  }
+
+  .iconTg {
+    width: 36px;
+    padding-left: 2px;
+    padding-top: 2px;
+  }
+
+  .input {
+    font-size: 15px;
+  }
+
+  .submitButton {
+    width: 270px;
+    font-size: 20px;
+  }
+}
