fix: починить главную страницу. убрать причину появлявшегося скролла

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -2,7 +2,7 @@
     text-align: center;
     background: #080A0F;
     color: white;
-    height: 100vh;
+    height: auto;
     display: flex;
     align-items: center;
     padding-right: 10vh;
